Sat 10th May 2014       int.ml, real.ml, Library/prime.ml, Library/integer.ml

Added a few miscellaneous trivial theorems:

  DIVIDES_GCD_LEFT =
    |- !m n. m divides n <=> gcd (m,n) = m

  DIVIDES_GCD_RIGHT =
    |- !m n. n divides m <=> gcd (m,n) = n

  INT_DIVIDES_ANTISYM_DIVISORS =
    |- !a b. a divides b /\ b divides a <=> (!d. d divides a <=> d divides b)

  INT_DIVIDES_GCD_LEFT =
    |- !m n. m divides n <=> gcd (m,n) = abs m

  INT_DIVIDES_GCD_RIGHT =
    |- !m n. n divides m <=> gcd (m,n) = abs n

  INT_EQ_SGN_ABS =
    |- !x y. x = y <=> int_sgn x = int_sgn y /\ abs x = abs y

  REAL_EQ_SGN_ABS =
    |- !x y. x = y <=> real_sgn x = real_sgn y /\ abs x = abs y

Sat 10th May 2014       Examples/dickson.ml

Added a proof of Dickson's Lemma, plus the Nash-Williams minimal bad sequence
property in a bit more generality (for a "safety property" of sequences in the
Lamport/Alpern/Schneider sense).

Fri  9th May 2014       Library/card.ml

Added COUNTABLE_SUBSET_NUM = |- !s:num->bool. COUNTABLE s

Sun 27th Apr 2014       Library/permutations.ml

Added

  PERMUTES_BIJECTIONS =
   |- !p q. (!x. x IN s ==> p x IN s) /\ (!x. ~(x IN s) ==> p x = x) /\
            (!x. x IN s ==> q x IN s) /\ (!x. ~(x IN s) ==> q x = x) /\
            (!x. p(q x) = x) /\ (!x. q(p x) = x)
            ==> p permutes s

Sat 19th Apr 2014       sets.ml

Added another clause to FORALL_IN_GSPEC and EXISTS_IN_GSPEC for the case of 4
bound variables, so they have now become:

  FORALL_IN_GSPEC =
   |- (!P f. (!z. z IN {f x | P x} ==> Q z) <=> (!x. P x ==> Q(f x))) /\
      (!P f. (!z. z IN {f x y | P x y} ==> Q z) <=>
             (!x y. P x y ==> Q(f x y))) /\
      (!P f. (!z. z IN {f w x y | P w x y} ==> Q z) <=>
             (!w x y. P w x y ==> Q(f w x y))) /\
      (!P f. (!z. z IN {f v w x y | P v w x y} ==> Q z) <=>
             (!v w x y. P v w x y ==> Q(f v w x y)))

  EXISTS_IN_GSPEC =
   |- (!P f. (?z. z IN {f x | P x} /\ Q z) <=> (?x. P x /\ Q(f x))) /\